# project2-dijkstra

./: .gitignore  CMakeLists.txt  clean.sh  project2.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
include/: node_dijkstra.hpp  project2.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/project2d-engine/: CMakeLists.txt
libs/project2d-engine/include/: shader.hpp  shapes.hpp
libs/project2d-engine/shaders/: fragment.shader  vertex.shader
libs/project2d-engine/src/: shapes.cpp
src/: main.cpp  node_dijkstra.cpp  project2.cpp
